--- a/src/components/General/style.css
+++ b/src/components/General/style.css
@@ -24,7 +24,18 @@ footer{
 
 }
 
-.logo ing {
+.logo img {
     height: 30px;
 
+}
+.footer__copy {
+    display:flex;
+align-content: space-between;
+}
+.footer__nav {
+display: grid;
+gap: 10px;
+}
+.footer__nav a:hover {
+    color: blueviolet;
 }
