--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 body {
   background-color: antiquewhite;
   font-family: sans-serif;
+margin: 0;
 }
-
+a {
+  color: inherit;
+  text-decoration: none;
+}
+ul {
+  margin: 0;
+  list-style: none;
+}
 p {
   color: black;
   font-size: 20px;
