--- a/src/components/General/style.css
+++ b/src/components/General/style.css
@@ -39,3 +39,22 @@ gap: 10px;
 .footer__nav a:hover {
     color: blueviolet;
 }
+.header__menu,
+.header_menu >span {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+}
+.header__menu>span>* {
+    cursor: pointer;
+}
+.header__menu svg:hover {
+    fill:red;
+}
+/* тоже самое 
+.header__menu a:hover ,
+.header__menu svg:hover{
+    color:red;
+}*/
