--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,23 @@
 body {
   background-color: antiquewhite;
   font-family: sans-serif;
-margin: 0;
+  margin: 0;
+}
+#root {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows:  auto 1fr auto;
 }
 a {
   color: inherit;
   text-decoration: none;
 }
+
 ul {
   margin: 0;
   list-style: n one;
 }
+
 p {
   color: black;
   font-size: 20px;
@@ -19,5 +26,12 @@ p {
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  padding: 30px;
   gap: 20px;
+}
+.search-result {
+  grid-column-end: span 3;
+  margin: 0;
+  color: grey;
+  font-size: 1rem ;
 }
