--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -5,9 +5,19 @@
     border: 1px solid green;
     padding: 12px;
     border-radius: 8px;
+    grid-template-rows: 120px auto 1fr 30px;
+    align-content: flex-start;
+}
+
+.card-lite h4 {
+    margin: 0;
+}
+
+.card-lite p {
+    margin: 0;
 }
 
 .card-lite img {
-    height: 120px;
-
+    height: 100%;
+    justify-self: center;
 }
