--- a/src/components/General/style.css
+++ b/src/components/General/style.css
@@ -1,20 +1,32 @@
 header {
     background: orange;
     padding: 12px 20px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-footer{
+
+header .search-block {
+    order: 1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #222;
+    color: yellow;
+}
+
+footer {
     padding: 12px 20px;
     display: flex;
     align-items: stretch;
     justify-content: space-between;
-       background-color: black;
-       color: yellow;
+    background-color: black;
+    color: yellow;
 
 }
+
 .logo {
     display: flex;
     align-items: center;
@@ -28,33 +40,53 @@ footer{
     height: 30px;
 
 }
+
 .footer__copy {
-    display:flex;
-align-content: space-between;
+    display: flex;
+    align-content: space-between;
 }
+
 .footer__nav {
-display: grid;
-gap: 10px;
+    display: grid;
+    gap: 10px;
 }
+
 .footer__nav a:hover {
     color: blueviolet;
 }
+
 .header__menu,
-.header_menu >span {
+.header__menu>span {
     font-size: 1.2rem;
     display: flex;
     align-items: center;
     gap: 10px;
 
 }
+
 .header__menu>span>* {
     cursor: pointer;
 }
+
 .header__menu svg:hover {
-    fill:red;
+    fill: red;
 }
+
 /* тоже самое 
 .header__menu a:hover ,
 .header__menu svg:hover{
     color:red;
 }*/
+@media (min-width:576px) {
+    header {
+        flex-wrap: nowrap;
+    }
+
+
+    header.search-block {
+        order: 0;
+        width: auto;
+
+    }
+
+}
