--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@ body {
   font-family: sans-serif;
   margin: 0;
 }
+
 #root {
   min-height: 100vh;
   display: grid;
-  grid-template-rows:  auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
 }
+
 a {
   color: inherit;
   text-decoration: none;
@@ -25,15 +27,21 @@ p {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   padding: 30px;
- align-content: flex-start;
+  align-content: flex-start;
   gap: 20px;
 }
-.
+
 .search-result {
   grid-column-end: span 3;
   margin: 0;
   color: grey;
-  font-size: 1rem ;
+  font-size: 1rem;
+}
+
+@media (min-width:576px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
